Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.6.1, Qt Creator 4.1.0-rc1
-
Fix Version/s: Qt Creator 4.0.0-beta1
-
Component/s: Test Integration
-
Labels:None
-
Environment:Windows desktop, Qt 5.4.2, Qt 5.6.0, CMake 3.5-rc2
-
Commits:cacc5bfb9be2b8cfd175ccb1fd6ab953b46b7772
Description
Autotest doesn't work for CMake projects.
First, it checks for "#define QT_TEST_LIB 1" in the project parts, but official cmake scripts setup "#define QT_TEST_LIB".
Easy to fix, now the plugin detects all tests, but fail to run them. No project configuration found, because completeBasicProjectInformation() check agains a pro file, which is not existing.